# bayesian_dpddm

./: .gitignore  CHANGELOG.md  README.md  clean_repo.sh  debug.ipynb  installed_packages.txt  piprequires.txt  pyproject.toml  requirements.txt  run_cifar10.slrm  run_cifar_submit.bash  run_uci_submit.bash  setup.py  sweep_uci.slrm
ablations/: T.py  ablations.ipynb  debug_bayesian_mlp.ipynb  flops.ipynb  oversampling.ipynb  reghead.py  run_ablation.sbatch  temp.py
bayesian_dpddm/: __init__.py  _metadata.py
data/: __init__.py  camelyon17_data.py  cifar10_data.py  civilcomments_data.py  data_utils.py  synthetic_data.py
experiments/: README.md  camelyon17_jobs_final.sbatch  cifar10_jobs_final.sbatch  cifar_m0.slrm  cifar_m1.slrm  cifar_m2.slrm  cifar_m3.slrm  exp_cifar10.py  launch_camelyon17.sh  launch_civilcomments.sh  launch_slurm.sh  old_utils.py  replace_wandb_agent.sh  run.py  run_camelyon_final_10.bash  run_camelyon_final_100.bash  run_camelyon_final_20.bash  run_camelyon_final_200.bash  run_camelyon_final_50.bash  run_cifar_final_100.bash  run_cifar_final_200.bash  s_m.sh  s_m0.slrm  s_m1.slrm  s_m2.slrm  s_m3.slrm  s_m4.slrm  s_m5.slrm  s_normal.sh  s_scavenger.slrm  sbatch_all.sh  sbatch_all_cifar10.sh  sbatch_camelyon17.slrm  sbatch_camelyon17_c.slrm  sbatch_cifars.slrm  sbatch_civilcomments.slrm  sbatch_civilcomments_c.slrm  sbatch_uci.slrm  spam_scavenger.sh  sweep.yaml  (+12 more)
logs/: slurm.err  slurm.out
results/: cifar10_submit.csv  results_analysis.ipynb  results_camelyon17_10.csv  results_camelyon17_100_final.csv  results_camelyon17_10_final.csv  results_camelyon17_200_final.csv  results_camelyon17_20_final.csv  results_camelyon17_50_final.csv  results_cifar10_10.csv  results_cifar10_100.csv  results_cifar10_100_final.csv  results_cifar10_10_final.csv  results_cifar10_20.csv  results_cifar10_200.csv  results_cifar10_200_final.csv  results_cifar10_20_final.csv  results_cifar10_50.csv  results_cifar10_50_final.csv  results_cifar10_50_old.csv  results_uci_10.csv  (+9 more)
(+119 files in other folders)
