[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian_dpddm"
version = "1.0.2"
authors = [
    { name = "viet", email = "viet@cs.toronto.edu" },
]
description = "Implements Bayesian D-PDDM for Post-Deployment Deterioration Monitoring of ML models."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.26.4', 
    'torch>=2.5.1',
    'torchvision>=0.20.1',
    'vbll>=0.2.6',
    'tqdm>=4.66.5',
    'matplotlib>=3.10.0',
    'pillow>=11.0.0',
    'wandb>=0.19.6',
]
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/opent03/bayesian_dpddm"

[tool.setuptools.packages.find]
where = ["."]
include = ["bayesian_dpddm*"]